WIP: Fixed resizing issues and added new GUI elements.
- GameBoard now resizes properly to fit into the screen
- Added an indicator that shows how many disks the players have left.